--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,41 +1,54 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
-
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
+
+name: Build
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
+  lint:
+    name: Lint files
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.20'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          version: latest
   build:
     name: Build binary
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     strategy:
-	    matrix:
-		goosarch:
-			  - 'darwin/amd64'
-			  - 'darwin/arm64'
-			  - 'linux/386'
-			  - 'linux/amd64'
-			  - 'windows/amd64'
-		steps:
-		  - name: Checkout code
-			uses: actions/checkout@v3
-		  - uses: actions/setup-go@v2
-			with:
-			  go-version: '1.20'
-		  - name: Get OS and arch info
-			run: |
-			  GOOSARCH=${{matrix.goosarch}}
-			  GOOS=${GOOSARCH%/*}
-			  GOARCH=${GOOSARCH#*/}
-			  BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
-			  echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
-			  echo "GOOS=$GOOS" >> $GITHUB_ENV
-			  echo "GOARCH=$GOARCH" >> $GITHUB_ENV
-		  - name: Build
-			run: |
-			  go build -o "$BINARY_NAME" -v
+      matrix:
+        goosarch:
+          - 'darwin/amd64'
+          - 'darwin/arm64'
+          - 'linux/386'
+          - 'linux/amd64'
+          - 'windows/amd64'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.20'
+      - name: Get OS and arch info
+        run: |
+          GOOSARCH=${{matrix.goosarch}}
+          GOOS=${GOOSARCH%/*}
+          GOARCH=${GOOSARCH#*/}
+          BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
+          echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
+          echo "GOOS=$GOOS" >> $GITHUB_ENV
+          echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+      - name: Build
+        run: |
+          go build -o "$BINARY_NAME" -v
