--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -35,6 +35,9 @@ jobs:
           GOOS=${GOOSARCH%/*}
           GOARCH=${GOOSARCH#*/}
           BINARY_NAME=portforward-$GOOS-$GOARCH
+          if [[ "$GOOS" == "windows" ]]; then
+            BINARY_NAME="$BINARY_NAME.exe"
+          fi          
           echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
           echo "GOOS=$GOOS" >> $GITHUB_ENV
           echo "GOARCH=$GOARCH" >> $GITHUB_ENV
